--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.4.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^4.0.1",
+    "react-hot-toast": "^2.1.1",
+    "react-markdown": "^7.1.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.35",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4"
   }
